Remove the e _config.yml file

--- a/right.html
+++ b/right.html
@@ -4,7 +4,7 @@
       <div class="panel-heading">
         <div class="meta">
           <span class="tooltipped tooltipped-n">
-            <a rel="bookmark" href="#">Git操作异常：无法ping通github.com</a>
+            <a rel="bookmark" href="javascript:loadArticleDetail('201712160024')">Git操作异常：无法ping通github.com</a>
           </span>
         </div>
       </div>
@@ -31,7 +31,7 @@
       <div class="panel-heading">
         <div class="meta">
           <span class="tooltipped tooltipped-n">
-            <a rel="bookmark" href="#">Java工具类：数据签名/验证、数据加密/解密</a>
+            <a rel="bookmark" href="javascript:loadArticleDetail('201712161057')">Java工具类：数据签名/验证、数据加密/解密</a>
           </span>
         </div>
       </div>
