--- a/right.html
+++ b/right.html
@@ -1,57 +1,54 @@
-<div id="article">
-  <article class="article-main">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <div class="meta">
-          <span class="tooltipped tooltipped-n">
-            <a rel="bookmark" href="javascript:loadArticleDetail('201712160024')">Git操作异常：无法ping通github.com</a>
-          </span>
-        </div>
-      </div>
-      <div class="panel-body">
-        <div>
-          <p>ssh: Could not resolve hostname github.com: Non-recoverable failure in name resolution
-            <br />fatal: Could not read from remote repository.</p>
-          <p>
-          </p>
-        </div>
-        <div class="read-more">
-          <a href="javascript:loadArticleDetail('201712160024')">
-            <span class="left">阅读更多</span>
-            <span class="read-more-icon"></span>
-            <span class="clear"></span>
-          </a>
-          <div class="clear"></div>
-        </div>
-      </div>
-    </div>
-  </article>
-  <article class="article-main">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <div class="meta">
-          <span class="tooltipped tooltipped-n">
-            <a rel="bookmark" href="javascript:loadArticleDetail('201712161057')">Java工具类：数据签名/验证、数据加密/解密</a>
-          </span>
-        </div>
-      </div>
-      <div class="panel-body">
-        <div>
-          <p>在数据传输中，数据签名与签名校验用于防止在传输过程被篡改，校验其数据的完整性
-            <br />加密/解密用于防止泄密，进行加密传输处理，该工具类提供了非对称加密算法的数据签名
-            <br />与对称性的数据加密方法.</p>
-          <p>
-          </p>
-        </div>
-        <div class="read-more">
-          <a href="javascript:loadArticleDetail('201712161057')">
-            <span class="left">阅读更多</span>
-            <span class="read-more-icon"></span>
-            <span class="clear"></span>
-          </a>
-          <div class="clear"></div>
-        </div>
-      </div>
-    </div>
-  </article>
-</div>
+<script>
+	 $.get("datas/articles.json", function(articles){
+        $.each(articles,function(i,article){
+			var articleContentHtml = getArticleContentHtml(article);
+			$("#articles").append(articleContentHtml);
+		});		
+	 });
+	 
+	 function getArticleContentHtml(article){
+	    var articleContentHtml = '<article class="article-main">'+
+            '<div class="panel panel-default">'+
+			    getArticleHeadHtml(article)+
+				getArticleBodyHtml(article)+
+			'</div>'+
+        '</article>';
+		return articleContentHtml;
+	 }
+	 function getArticleHeadHtml(article){
+		var headHtml =  '<div class="panel-heading head">'+
+							'<div class="meta">'+
+							  '<span class="tooltipped tooltipped-n">'+
+								'<a rel="bookmark" href="javascript:loadArticleDetail("'+article.content+'")">'+article.title+'</a>'+
+							  '</span>'
+							'</div>'
+						'</div>';
+		return headHtml;
+	 }
+	 function getArticleBodyHtml(article){
+	    var bodyHtml=  '<div class="panel-body body">'+
+						   getArticleDescribeHtml(article)+
+						   getArticleReadMoreHtml(article)+
+						'</div>';
+		return bodyHtml;
+	 }
+	 function getArticleDescribeHtml(article){
+	    var describeHtml = '<div class="describe">'+
+						  '<p>'+article.describe+'</p>'+
+						'</div>';
+		return describeHtml;
+	 }
+	 
+	 function getArticleReadMoreHtml(article){
+	    var readMoreHtml = '<div class="read-more">'+
+							  '<a href="javascript:loadArticleDetail("'+article.content+'")">'+
+								'<span class="left">阅读更多</span>'+
+								'<span class="read-more-icon"></span>'+
+								'<span class="clear"></span>'+
+							  '</a>'+
+							'</div>';
+		return readMoreHtml;
+	 }
+	 
+</script>
+<div id="articles"></div>
